--- a/soft-booking/views/layouts/main.hbs
+++ b/soft-booking/views/layouts/main.hbs
@@ -10,22 +10,36 @@
 <body>
 
     <div id="container">
-
+<!--
+        <div>
+            <div class="notification loadingBox">
+                Loading …
+            </div>
+            <div class="notification infoBox">
+                <span>Info</span>
+            </div>
+            <div class="notification errorBox">
+                <span>Error</span>
+            </div>
+        </div>
+    -->
         <nav>
             <div class="left-container">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Add +</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/hotel/create">Add +</a></li>
+                    <li><a href="/auth/login">Login</a></li>
+                    <li><a href="/auth/register">Register</a></li>
                 </ul>
             </div>
             <div class="right-container">
-                <a href="" class="log-out">{{name}}</a>
-                <a href="" class="log-out">Logout</a>
+                <a href="/profile" class="log-out">Placeholer{{name}}</a>
+                <a href="/auth/logout" class="log-out">Logout</a>
             </div>
         </nav>
 
-            {{{body}}}
-            
+        {{{body}}}
+
         <footer>@SoftUni - JS Back-end - BookingUni 2020</footer>
     </div>
 
