Added register error handling

--- a/soft-booking/views/layouts/main.hbs
+++ b/soft-booking/views/layouts/main.hbs
@@ -10,19 +10,15 @@
 <body>
 
     <div id="container">
-<!--
+        {{#if errors}}
         <div>
-            <div class="notification loadingBox">
-                Loading …
-            </div>
-            <div class="notification infoBox">
-                <span>Info</span>
-            </div>
             <div class="notification errorBox">
-                <span>Error</span>
+                {{#each errors}}
+                <span>{{this}}</span>
+                {{/each}}
             </div>
         </div>
-    -->
+        {{/if}}
         <nav>
             <div class="left-container">
                 <ul>
