--- a/exam prep/views/layouts/main.hbs
+++ b/exam prep/views/layouts/main.hbs
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+
     <header class="header">
         <nav>
             <img src="/images/logo.png" class="logo">
@@ -24,6 +26,13 @@
             </ul>
         </nav>
     </header>
+    <div>
+        {{#if error}}
+        <div class="errorContainer">
+            <p>{{error}}</p>
+        </div>
+        {{/if}}
+    </div>
     {{{body}}}
 
     <footer>
