--- a/exam prep/views/layouts/main.hbs
+++ b/exam prep/views/layouts/main.hbs
@@ -10,29 +10,32 @@
 </head>
 
 <body>
-
-
     <header class="header">
         <nav>
             <img src="/images/logo.png" class="logo">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/crypto">All Crypto</a></li>
-                <li><a href="/search">Search</a></li>
-                <li><a href="/create">Create Offer</a></li>
+                <li><a href="#">All Crypto</a></li>
+                <li><a href="#">Search</a></li>
+                {{#if isAuthenticated}}
+                <li><a href="#">Create Offer</a></li>
+                <li><a href="/auth/logout">Logout</a></li>
+                {{else}}
                 <li><a href="/auth/login">Login</a></li>
                 <li><a href="/auth/register">Register</a></li>
-                <li><a href="/auth/logout">Logout</a></li>
+                {{/if}}
+
             </ul>
         </nav>
     </header>
-    <div>
-        {{#if error}}
-        <div class="errorContainer">
-            <p>{{error}}</p>
+    {{#if error}}
+        <div>
+            <div class="errorContainer">
+                <p>{{error}}</p>
+            </div>
         </div>
-        {{/if}}
-    </div>
+    {{/if}}
+
     {{{body}}}
 
     <footer>
