--- a/exam prep/views/register.hbs
+++ b/exam prep/views/register.hbs
@@ -10,7 +10,7 @@
     <div class="register-box">
         <h1>Register</h1>
         <h4>It's free and only take a minute</h4>
-        <form action="/auth/register" method="POST">
+        <form action="/auth/register" method="post">
             <label>Username</label>
             <input type="text" name="username" placeholder="Username..">
             <label>Email</label>
