--- a/exam prep/job-ads/views/details.hbs
+++ b/exam prep/job-ads/views/details.hbs
@@ -21,13 +21,13 @@
         <article class="details-page-card-buttons">
           <!--only for registered users and author of the ad-->
           {{#if isAuthor}}
-              <a href="#" class="btn-edit">Edit</a>
-              <a href="#" class="btn-delete">Delete</a>
+          <a href="/ad/{{_id}}/edit" class="btn-edit">Edit</a>
+          <a href="/ad/{{_id}}/delete" class="btn-delete">Delete</a>
           {{else}}
+          <a href="/ad/{{_id}}/apply" class="btn-apply">Apply now!</a>
+          <p class="applied-people">Hurry up, 1 people have already applied.</p>
           {{/if}}
           <!--logged in user who did not apply for current ad-->
-          <!--<a href="#" class="btn-apply">Apply now!</a>
-                            <p class="applied-people">Hurry up, 1 people have already applied.</p>-->
 
           <!--logged in user who has already applied for current ad-->
           <!--<p class="already-applied">You have already applied!</p>-->
